--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,343 @@
-/* место для вашего кода */
+/*Общии стили*/
+
+body {
+  font-family: Raleway, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+/*Стилизация блока `header`*/
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  margin-top: 95px;
+}
+
+.header__links-list {
+  display: flex;
+  column-gap: 27px;
+  word-spacing: 0.2px;
+  list-style: circle;
+  padding-left: 50px;
+  padding-bottom: 15px;
+}
+
+.header__link {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.13px;
+  letter-spacing: 0.35px;
+  border-bottom: 1px solid;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  border: none;
+}
+
+.header__logo {
+  width: 136px;
+  height: 87px;
+  padding-bottom: 28px;
+}
+
+.header__address {
+  justify-self: end;
+  margin-right: 88px;
+  padding-bottom: 15px;
+}
+
+/* Общии стили для блока `address` */
+
+.address {
+  font-size: 18px;
+  line-height: 133%;
+  font-weight: 400;
+}
+
+.address-link {
+  font-style: normal;
+  text-decoration: none;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+}
+
+/*Стилизация блока `cover`*/
+.cover {
+  position: relative;
+  padding: 5px 0 0 0;
+  margin: 83px 0 0 0;
+  background: url(/images/cover.jpg) no-repeat center / cover;
+}
+
+.cover-overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.6;
+  z-index: 1;
+}
+
+.cover__title {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 135%;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  color: rgb(255, 255, 255);
+  padding: 68px 50px 6px 50px;
+  position: relative;
+  z-index: 2;
+}
+
+.aligned-text_center {
+  position: relative;
+  left: 330px;
+  
+}
+
+.aligned-text_right {
+  position: relative;
+  left: 614px;
+}
+
+.description {
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 50px;
+  position: relative;
+  z-index: 2;
+}
+
+.description__text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 127%;
+  position: relative;
+  bottom: 3px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+  color: #fff;
+}
+
+.bet-button {
+  width: 256px;
+  height: 51px;
+  position: relative;
+  top: 6px;
+  text-align: center;
+  margin-bottom: 55.5px;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: inherit;
+  color: rgb(255, 255, 255);
+}
+
+/*Стилизация блока `lots`*/
+
+.lots {
+  margin-top: 180px;
+}
+
+.lots__heading {
+  font-weight: 700;
+  font-size: 40px;
+  padding-left: 64px;
+  margin-bottom: 27px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  list-style: none;
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  row-gap: 25px;
+  padding: 0;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+  margin-bottom: 14px;
+  margin-left: 24px;
+}
+
+.card-link {
+  height: 100%;
+}
+
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  position: relative;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  width: 334px;
+  min-height: 596px;
+  background: #000;
+  opacity: 0.6;
+  z-index: 1;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  position: absolute;
+  top: 26px;
+  padding-inline: 40px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #fff;
+  z-index: 2;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  padding-inline: 40px;
+  padding-bottom: 28px;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  margin-left: 64px;
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  border-bottom: 2px solid rgb(0, 0, 0);
+}
+
+/*Стилизация блока `about`*/
+
+.about {
+  display: grid;
+  grid-template-columns: 334px auto;
+  margin-top: 122px;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 32px 0 0 70px;
+  background-color: rgb(0, 0, 0);
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column-content {
+  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 28px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+}
+
+.about__text-content {
+  width: 690px;
+  height: 298px;
+  box-sizing: content-box;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  margin-top: 24px;
+}
+
+/* Стилизация блока `footer` */
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: start;
+  margin-top: 180px;
+  margin-bottom: 80px;
+}
+
+.footer__address {
+  margin-right: 27px;
+  margin-top: 15px;
+  color: #000;
+  font-style: normal;
+}
+
+.footer__menu {
+  margin-right: 39px;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+}
+
+.footer__menu-link {
+  font-weight: 400;
+  font-size: 18px;
+  border-bottom: 2px solid rgb(0, 0, 0);
+}
+
+.footer__menu-link_active {
+  border: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  column-gap: 48px;
+  margin-right: 13px;
+}
+
+.footer__social-list-item {
+  width: 48px;
+  height: 48px;
+}
