--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
 /*Общии стили*/
-
-body {
-  font-family: Raleway, sans-serif;
-  margin: 0;
-  padding: 0;
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: #000;
+  opacity: 0.6;
+  z-index: 0;
 }
+
 
 /*Стилизация блока `header`*/
 
@@ -13,12 +15,13 @@ body {
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   margin-top: 95px;
+  margin-bottom: 84px;
 }
 
 .header__links-list {
   display: flex;
-  column-gap: 27px;
-  word-spacing: 0.2px;
+  column-gap: 32px;
+  word-spacing: 0.1px;
   list-style: circle;
   padding-left: 50px;
   padding-bottom: 15px;
@@ -28,7 +31,6 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 21.13px;
-  letter-spacing: 0.35px;
   border-bottom: 1px solid;
 }
 
@@ -43,7 +45,7 @@ body {
 .header__logo {
   width: 136px;
   height: 87px;
-  padding-bottom: 28px;
+  margin-bottom: auto;
 }
 
 .header__address {
@@ -56,36 +58,28 @@ body {
 
 .address {
   font-size: 18px;
-  line-height: 133%;
+  font-style: normal;
+  line-height: 137%;
   font-weight: 400;
 }
 
 .address-link {
   font-style: normal;
   text-decoration: none;
-  border-bottom: 2px solid rgb(0, 0, 0);
+  border-bottom: 1px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0);
 }
 
 /*Стилизация блока `cover`*/
+
 .cover {
   position: relative;
-  padding: 5px 0 0 0;
-  margin: 83px 0 0 0;
-  background: url(/images/cover.jpg) no-repeat center / cover;
-}
-
-.cover-overlay {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  opacity: 0.6;
-  z-index: 1;
+  padding: 156px 0 40px 0;
+  background: url(../images/cover.jpg) no-repeat center / cover;
 }
 
 .cover__title {
+  margin-bottom: 45px;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 100px;
@@ -93,48 +87,43 @@ body {
   letter-spacing: 0.3em;
   text-transform: uppercase;
   color: rgb(255, 255, 255);
-  padding: 68px 50px 6px 50px;
-  position: relative;
+  padding: 0 50px 50px 50px;
   z-index: 2;
 }
 
 .aligned-text_center {
-  position: relative;
-  left: 330px;
-  
+  color: #fff;
+  margin-left: 331px;
 }
 
 .aligned-text_right {
-  position: relative;
-  left: 614px;
+  margin-left: 613px;
 }
 
 .description {
   display: flex;
   justify-content: space-between;
+  align-items: start;
   padding-inline: 50px;
-  position: relative;
   z-index: 2;
 }
 
 .description__text {
+  padding-top: 13px;
   font-weight: 400;
   font-size: 22px;
   line-height: 127%;
-  position: relative;
-  bottom: 3px;
+  letter-spacing: 0.1px;
   text-transform: uppercase;
   word-spacing: 18px;
   color: #fff;
 }
 
 .bet-button {
-  width: 256px;
-  height: 51px;
-  position: relative;
-  top: 6px;
+  margin-bottom: 10px;
+  min-width: 256px;
+  min-height: 51px;
   text-align: center;
-  margin-bottom: 55.5px;
   font-weight: 500;
   font-size: 22px;
   text-transform: uppercase;
@@ -153,7 +142,6 @@ body {
   font-weight: 700;
   font-size: 40px;
   padding-left: 64px;
-  margin-bottom: 27px;
   text-transform: uppercase;
 }
 
@@ -164,6 +152,8 @@ body {
   flex-wrap: wrap;
   row-gap: 25px;
   padding: 0;
+  margin-top: 28px;
+  margin-bottom: 15px;
 }
 
 .lots__card-list-item {
@@ -181,7 +171,9 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: space-between;
+  background-size: cover;
+  background-position: center;
   position: relative;
 }
 
@@ -197,23 +189,13 @@ body {
   background-image: url(/images/card-lot-03.jpg);
 }
 
-.card-overlay {
-  position: absolute;
-  top: 0;
-  width: 334px;
-  min-height: 596px;
-  background: #000;
-  opacity: 0.6;
-  z-index: 1;
-}
 
 .card__title {
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
-  position: absolute;
-  top: 26px;
   padding-inline: 40px;
+  margin-top: 47px;
   text-transform: uppercase;
   text-decoration: underline;
   text-decoration-skip-ink: none;
@@ -226,19 +208,17 @@ body {
   font-size: 20px;
   line-height: 120%;
   padding-inline: 40px;
-  padding-bottom: 28px;
+  padding-bottom: 49px;
   color: #fff;
-  position: relative;
   z-index: 2;
 }
 
 .lots__look-more-link {
   margin-left: 64px;
-  margin-top: 10px;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
-  border-bottom: 2px solid rgb(0, 0, 0);
+  border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 /*Стилизация блока `about`*/
@@ -268,26 +248,25 @@ body {
 .about__column-content {
   margin-top: 100px;
   margin-left: 50px;
-  margin-right: 28px;
 }
 
 .about__title {
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
+  margin-top: 34px;
   margin-bottom: 100px;
 }
 
 .about__text-content {
-  width: 690px;
-  height: 298px;
-  box-sizing: content-box;
+  max-width: 688px;
 }
 
 .about__text {
   font-weight: 400;
-  font-size: 20px;
-  line-height: 120%;
+  font-size: 19px;
+  letter-spacing: 0.5px;
+  line-height: 126%;
   margin-top: 24px;
 }
 
@@ -304,14 +283,10 @@ body {
 
 .footer__address {
   margin-right: 27px;
-  margin-top: 15px;
   color: #000;
   font-style: normal;
 }
 
-.footer__menu {
-  margin-right: 39px;
-}
 
 .footer__menu-list {
   display: flex;
@@ -323,7 +298,8 @@ body {
 .footer__menu-link {
   font-weight: 400;
   font-size: 18px;
-  border-bottom: 2px solid rgb(0, 0, 0);
+  border-bottom: 1px solid rgb(0, 0, 0);
+  padding-bottom: 2px;
 }
 
 .footer__menu-link_active {
@@ -334,7 +310,7 @@ body {
   list-style: none;
   display: flex;
   column-gap: 48px;
-  margin-right: 13px;
+  margin-left: 26px;
 }
 
 .footer__social-list-item {
