--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,9 @@
 .overlay {
   position: absolute;
   inset: 0;
-  background-color: #000;
+  z-index: -1;
   opacity: 0.6;
-  z-index: 0;
+  background-color: #000;
 }
 
 
@@ -21,17 +21,17 @@
 .header__links-list {
   display: flex;
   column-gap: 32px;
+  padding-bottom: 15px;
+  padding-left: 50px;
   word-spacing: 0.1px;
   list-style: circle;
-  padding-left: 50px;
-  padding-bottom: 15px;
 }
 
 .header__link {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.13px;
   border-bottom: 1px solid;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.13px;
 }
 
 .header__links-list-item_no-bullit {
@@ -57,79 +57,79 @@
 /* Общии стили для блока `address` */
 
 .address {
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
   line-height: 137%;
-  font-weight: 400;
 }
 
 .address-link {
-  font-style: normal;
-  text-decoration: none;
   border-bottom: 1px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0);
+  font-style: normal;
+  text-decoration: none;
 }
 
 /*Стилизация блока `cover`*/
 
 .cover {
   position: relative;
+  z-index: -2;
   padding: 156px 0 40px 0;
   background: url(../images/cover.jpg) no-repeat center / cover;
 }
 
 .cover__title {
   margin-bottom: 45px;
-  font-family: Raleway, sans-serif;
+  padding: 0 50px 50px 50px;
+  color: rgb(255, 255, 255);
   font-weight: 700;
   font-size: 100px;
   line-height: 135%;
   letter-spacing: 0.3em;
   text-transform: uppercase;
-  color: rgb(255, 255, 255);
-  padding: 0 50px 50px 50px;
-  z-index: 2;
 }
 
 .aligned-text_center {
-  color: #fff;
   margin-left: 331px;
 }
-
+  
 .aligned-text_right {
   margin-left: 613px;
 }
 
 .description {
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: start;
   padding-inline: 50px;
-  z-index: 2;
 }
 
 .description__text {
+  z-index: 2;
   padding-top: 13px;
+  color: #fff;
   font-weight: 400;
   font-size: 22px;
   line-height: 127%;
   letter-spacing: 0.1px;
   text-transform: uppercase;
   word-spacing: 18px;
-  color: #fff;
 }
 
 .bet-button {
-  margin-bottom: 10px;
+  z-index: 2;
   min-width: 256px;
   min-height: 51px;
-  text-align: center;
+  margin-bottom: 10px;
+  border: 1px solid rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   font-weight: 500;
   font-size: 22px;
+  text-align: center;
   text-transform: uppercase;
-  border: 1px solid rgb(255, 255, 255);
   background-color: inherit;
-  color: rgb(255, 255, 255);
 }
 
 /*Стилизация блока `lots`*/
@@ -139,21 +139,21 @@
 }
 
 .lots__heading {
+  padding-left: 64px;
   font-weight: 700;
   font-size: 40px;
-  padding-left: 64px;
   text-transform: uppercase;
 }
 
 .lots__card-list {
-  list-style: none;
   display: flex;
-  justify-content: start;
   flex-wrap: wrap;
+  justify-content: start;
   row-gap: 25px;
-  padding: 0;
   margin-top: 28px;
   margin-bottom: 15px;
+  padding: 0;
+  list-style: none;
 }
 
 .lots__card-list-item {
@@ -168,13 +168,14 @@
 }
 
 .card {
-  height: 100%;
+  position: relative;
+  z-index: -2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-size: cover;
+  height: 100%;
   background-position: center;
-  position: relative;
+  background-size: cover;
 }
 
 .card_type_film {
@@ -191,34 +192,32 @@
 
 
 .card__title {
+  margin-top: 47px;
+  padding-inline: 40px;
+  color: #fff;
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
-  padding-inline: 40px;
-  margin-top: 47px;
-  text-transform: uppercase;
   text-decoration: underline;
   text-decoration-skip-ink: none;
-  color: #fff;
-  z-index: 2;
+  text-transform: uppercase;
 }
 
 .card__text {
+  padding-bottom: 49px;
+  padding-inline: 40px;
+  color: #fff;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
-  padding-inline: 40px;
-  padding-bottom: 49px;
-  color: #fff;
-  z-index: 2;
 }
 
 .lots__look-more-link {
   margin-left: 64px;
+  border-bottom: 1px solid rgb(0, 0, 0);
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
-  border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 /*Стилизация блока `about`*/
@@ -230,13 +229,13 @@
 }
 
 .about__logo {
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 240px;
+  height: 240px;
   margin: 32px 0 0 70px;
+  border-radius: 50%;
   background-color: rgb(0, 0, 0);
 }
 
@@ -251,24 +250,34 @@
 }
 
 .about__title {
+  margin-top: 34px;
+  margin-bottom: 100px;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
-  margin-top: 34px;
-  margin-bottom: 100px;
 }
 
 .about__text-content {
-  max-width: 688px;
+  max-width: 690px;
 }
 
 .about__text {
+  box-sizing: border-box;
+  margin-top: 24px;
   font-weight: 400;
   font-size: 19px;
-  letter-spacing: 0.5px;
   line-height: 126%;
-  margin-top: 24px;
+  letter-spacing: 0.5px;
 }
+
+.limit-width-content {
+  max-width: 688px;
+}
+
+.text-wrap {
+  margin: 0;
+}
+
 
 /* Стилизация блока `footer` */
 
@@ -296,10 +305,10 @@
 }
 
 .footer__menu-link {
-  font-weight: 400;
-  font-size: 18px;
   border-bottom: 1px solid rgb(0, 0, 0);
   padding-bottom: 2px;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .footer__menu-link_active {
@@ -307,10 +316,10 @@
 }
 
 .footer__social-list {
-  list-style: none;
   display: flex;
   column-gap: 48px;
   margin-left: 26px;
+  list-style: none;
 }
 
 .footer__social-list-item {
